<resources>
    <string name="app_name">ColorMyViews</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="red_label">RED</string>
    <string name="yellow_label">YELLOW</string>
    <string name="green_label">GREEN</string>
    <string name="ask_permissions">You don\'t have the necessary permission</string>
    <string name="image_captured">Captured image and saved to gallery</string>
    <string name="checkout_screenshot">checkout this screenshot, its so cool!</string>
    <string name="share_via">share via</string>
</resources>